# mortal-sanma

./: .gitignore  FORK_NOTES.md  README.md
libriichi-wasm/: Cargo.toml  README.md
libriichi-wasm/src/: consts.rs  hand.rs  lib.rs  rankings.rs  vec_ops.rs
libriichi-wasm/src/mjai/: event.rs
libriichi-wasm/src/state/: action.rs  agent_helper.rs  getter.rs  mod.rs  obs_repr.rs  player_state.rs  update.rs
mortal/: dataloader.py  engine.py  libriichi.so.bak  model.py  reward_calculator.py
test-data/: 2026011603gm-00b9-0000-2b45278f.xml.zst  2026011603gm-00b9-0000-2ddc9de6.xml.zst  2026011603gm-00b9-0000-36cf9559.xml.zst  2026011603gm-00b9-0000-52c92ebb.xml.zst  2026011603gm-00b9-0000-55f9a5cc.xml.zst  2026011603gm-00b9-0000-78cb7974.xml.zst  2026011603gm-00b9-0000-978d28ae.xml.zst  2026011603gm-00b9-0000-adcf2416.xml.zst  2026011603gm-00b9-0000-bf06caeb.xml.zst  2026011603gm-00b9-0000-c14aa6b4.xml.zst  2026011604gm-00b9-0000-84c9371d.xml.zst  2026011604gm-00b9-0000-93055867.xml.zst  2026011604gm-00b9-0000-9a272e0f.xml.zst  2026011605gm-00b9-0000-8fab616e.xml.zst  2026011605gm-00b9-0000-a703e906.xml.zst  2026011605gm-00b9-0000-ae39d20e.xml.zst  2026011605gm-00b9-0000-ba5e37ba.xml.zst  2026011605gm-00b9-0000-e51c33ba.xml.zst  2026011605gm-00b9-0000-f1193cea.xml.zst  2026011606gm-00b9-0000-97ef1301.xml.zst  2026011606gm-00b9-0000-a6997056.xml.zst  2026011606gm-00b9-0000-e4722c6f.xml.zst  2026011607gm-00b9-0000-0504789b.xml.zst  2026011607gm-00b9-0000-43b1b649.xml.zst  2026011607gm-00b9-0000-6f9b1fd3.xml.zst  2026011607gm-00b9-0000-8a7c7fb0.xml.zst  (+2987 more)
(+222 files in other folders)
