[package]
name = "libriichi-wasm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
once_cell = "1"
serde_json = "1"
boomphf = "0.6"
byteorder = "1"
ndarray = "0.16"
serde_with = "3"
derive_more = { version = "2", features = ["add", "add_assign", "sum"] }
rand = "0.9"
rand_chacha = "0.9"
flate2 = "1"
sha3 = "0.10"
glob = "0.3"
derivative = "2"
ahash = "0.8"
tinyvec = { version = "1", features = ["alloc", "serde", "rustc_1_57"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[workspace]

[profile.release]
opt-level = "s"
lto = true
